--- a/starter/app/src/main/res/values/attrs.xml
+++ b/starter/app/src/main/res/values/attrs.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="LoadingButton">
-<!--   TODO: create custom attributes for the view-->
+        <attr name="buttonColorLeft" format="color" />
+        <attr name="buttonColorRight" format="color" />
     </declare-styleable>
 </resources>
