--- a/starter/app/src/main/res/values/attrs.xml
+++ b/starter/app/src/main/res/values/attrs.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="LoadingButton">
-        <attr name="buttonColorLeft" format="color" />
-        <attr name="buttonColorRight" format="color" />
-    </declare-styleable>
+        <declare-styleable name="LoadingButton">
+            <attr name="backgroundDefaultColor" format="color" />
+            <attr name="backgroundLoadingColor" format="color" />
+            <attr name="archColor" format="color" />
+            <attr name="defaultButtonText" format="string" />
+            <attr name="loadingButtonText" format="string" />
+        </declare-styleable>
 </resources>
